--- a/index.html
+++ b/index.html
@@ -44,19 +44,31 @@
       <a href="pages/tasks.html" class="quick-link">
         <span class="icon">📋</span>
         <span class="title">任务池</span>
-        <span class="desc">查看开放任务，认领你感兴趣的项目</span>
+        <span class="desc">查看开放任务，一键领取</span>
+      </a>
+
+      <a href="pages/assistant.html" class="quick-link">
+        <span class="icon">🤖</span>
+        <span class="title">AI 助手</span>
+        <span class="desc">对话式引导，智能推荐任务</span>
+      </a>
+
+      <a href="pages/people.html" class="quick-link">
+        <span class="icon">👥</span>
+        <span class="title">人池</span>
+        <span class="desc">成员技能、贡献记录</span>
+      </a>
+
+      <a href="pages/resources.html" class="quick-link">
+        <span class="icon">📦</span>
+        <span class="title">资源池</span>
+        <span class="desc">共享资源、工具、知识</span>
       </a>
 
       <a href="pages/kanban.html" class="quick-link">
         <span class="icon">📊</span>
-        <span class="title">任务看板</span>
-        <span class="desc">实时查看任务进度和协作状态</span>
-      </a>
-
-      <a href="pages/about.html" class="quick-link">
-        <span class="icon">💡</span>
-        <span class="title">了解我们</span>
-        <span class="desc">价值观、愿景和组织方式</span>
+        <span class="title">看板</span>
+        <span class="desc">实时查看任务进度</span>
       </a>
 
       <a href="pages/join.html" class="quick-link">
