--- a/pages/people.html
+++ b/pages/people.html
@@ -6,7 +6,6 @@
   <title>人才库 - Grassroots Project</title>
   <link rel="stylesheet" href="../assets/css/styles.css">
   <style>
-    /* 人才库专用样式 */
     .stats-grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
@@ -19,11 +18,6 @@
       padding: 1.2rem;
       border-radius: 12px;
       text-align: center;
-      transition: all 0.3s;
-    }
-
-    .stat-card:hover {
-      border: 1px solid var(--accent-color);
     }
 
     .stat-card .number {
@@ -52,12 +46,6 @@
       padding: 1.2rem;
       border-radius: 12px;
       border-left: 4px solid var(--accent-color);
-      transition: all 0.3s;
-    }
-
-    .member-card:hover {
-      transform: translateX(4px);
-      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
     }
 
     .member-header {
@@ -78,7 +66,6 @@
       color: white;
       font-weight: bold;
       font-size: 1.1rem;
-      flex-shrink: 0;
     }
 
     .member-info h3 {
@@ -90,10 +77,6 @@
     .member-info .meta {
       font-size: 0.85rem;
       color: #666;
-    }
-
-    .member-tasks {
-      margin-top: 8px;
     }
 
     .task-badge {
@@ -133,11 +116,21 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      margin-bottom: 1rem;
+      margin: 2rem 0 1rem;
     }
 
     .section-header h2 {
       margin: 0;
+    }
+
+    .action-links {
+      display: flex;
+      gap: 12px;
+      align-items: center;
+    }
+
+    .action-links a, .action-links button {
+      font-size: 0.85rem;
     }
 
     .refresh-btn {
@@ -146,12 +139,6 @@
       border: 1px solid var(--border-color);
       border-radius: 6px;
       cursor: pointer;
-      font-size: 0.85rem;
-      transition: all 0.3s;
-    }
-
-    .refresh-btn:hover {
-      background: var(--light-gray);
     }
 
     .loading {
@@ -160,14 +147,32 @@
       color: #666;
     }
 
-    .edit-link {
-      color: var(--accent-color);
-      text-decoration: none;
-      font-size: 0.9rem;
+    .skills-table {
+      width: 100%;
+      border-collapse: collapse;
+      margin: 1rem 0;
     }
 
-    .edit-link:hover {
-      text-decoration: underline;
+    .skills-table th, .skills-table td {
+      text-align: left;
+      padding: 0.6rem;
+      border-bottom: 1px solid var(--border-color);
+    }
+
+    .skills-table th {
+      background: var(--light-gray);
+      font-weight: 600;
+    }
+
+    .template-block {
+      background: #1a1a1a;
+      color: #f5f5f5;
+      padding: 1rem;
+      border-radius: 8px;
+      font-family: monospace;
+      font-size: 0.85rem;
+      overflow-x: auto;
+      white-space: pre;
     }
   </style>
 </head>
@@ -200,7 +205,7 @@
 
     <h1>👥 人才库</h1>
 
-    <p>开放的协作场域，所有人都可以加入。</p>
+    <p>开放的协作场域，所有人都可以加入。技能、时间、当前参与、历史贡献——一切透明。</p>
 
     <!-- 统计 -->
     <div class="stats-grid">
@@ -213,23 +218,17 @@
         <div class="label">活跃中</div>
       </div>
       <div class="stat-card">
-        <div class="number" id="stat-completed">-</div>
-        <div class="label">已完成</div>
-      </div>
-      <div class="stat-card">
         <div class="number" id="stat-time">-</div>
-        <div class="label">总投入</div>
+        <div class="label">周投入</div>
       </div>
     </div>
-
-    <hr>
 
     <!-- 成员列表 -->
     <div class="section-header">
       <h2>成员</h2>
-      <div>
-        <button class="refresh-btn" onclick="loadAll()">🔄 刷新</button>
-        <a href="https://github.com/grassroots-project/tasks/blob/main/data/people.md" target="_blank" class="edit-link" style="margin-left: 8px;">✏️ 编辑</a>
+      <div class="action-links">
+        <button class="refresh-btn" onclick="loadAll()">🔄</button>
+        <a href="https://github.com/grassroots-project/tasks/edit/main/data/people.md" target="_blank">✏️ 编辑</a>
       </div>
     </div>
 
@@ -239,16 +238,48 @@
 
     <hr>
 
+    <!-- 如何加入 -->
     <h2>如何加入</h2>
 
-    <div class="card">
-      <ol style="margin-left: 1.2rem;">
-        <li>阅读<a href="about.html">项目介绍</a></li>
-        <li>回答<a href="join.html">筛选问卷</a></li>
-        <li>发送答案到 <strong>xiaoping.tang@gmail.com</strong></li>
-        <li>回复后，创建 PR 添加你的信息到成员列表</li>
-      </ol>
-    </div>
+    <ol style="margin-left: 1.5rem; margin-bottom: 1.5rem;">
+      <li>阅读 <a href="about.html">项目介绍</a>，了解我们在做什么</li>
+      <li>完成 <a href="join.html">筛选问卷</a></li>
+      <li>发送答案到 <strong>xiaoping.tang@gmail.com</strong></li>
+      <li>收到回复后，<a href="https://github.com/grassroots-project/tasks/edit/main/data/people.md" target="_blank">创建 PR</a> 添加你的信息</li>
+    </ol>
+
+    <hr>
+
+    <!-- 成员模板 -->
+    <h2>成员模板</h2>
+
+    <p>复制以下模板，填写你的信息：</p>
+
+    <div class="template-block">### [你的名字/昵称]
+- **加入时间**：YYYY-MM-DD
+- **技能标签**：[用逗号分隔，例如：文案、设计、技术]
+- **时间承诺**：每周 Xh
+- **当前任务**：-
+- **历史贡献**：-</div>
+
+    <hr>
+
+    <!-- 技能标签说明 -->
+    <h2>技能标签</h2>
+
+    <table class="skills-table">
+      <tr><th>标签</th><th>说明</th></tr>
+      <tr><td>文案</td><td>写作、内容策划</td></tr>
+      <tr><td>视频</td><td>视频制作、剪辑</td></tr>
+      <tr><td>设计</td><td>UI/UX、平面设计</td></tr>
+      <tr><td>技术</td><td>编程、开发</td></tr>
+      <tr><td>运营</td><td>社群运营、用户增长</td></tr>
+      <tr><td>沟通</td><td>沟通、协调</td></tr>
+      <tr><td>战略</td><td>战略规划、思维</td></tr>
+      <tr><td>产品</td><td>产品设计、规划</td></tr>
+    </table>
+
+    <hr>
 
     <a href="join.html" class="btn">🚀 加入我们</a>
     <a href="tasks.html" class="btn btn-outline">📋 查看任务</a>
@@ -272,7 +303,7 @@
           members = parsePeoplePool(poolData.body);
         }
       } catch (error) {
-        console.error('Failed to load people pool:', error);
+        console.error('Failed to load:', error);
       }
       renderStats();
       renderMembers();
@@ -281,15 +312,6 @@
     function renderStats() {
       const total = members.length;
       const active = members.filter(m => m.current && m.current !== '-' && m.current !== '无').length;
-      
-      // 计算已完成任务数
-      const completed = members.reduce((sum, m) => {
-        if (!m.history) return sum;
-        const matches = m.history.match(/#\d+/g);
-        return sum + (matches ? matches.length : 0);
-      }, 0);
-
-      // 计算总投入时间
       const totalTime = members.reduce((sum, m) => {
         if (!m.time) return sum;
         const match = m.time.match(/(\d+)/);
@@ -298,40 +320,21 @@
 
       document.getElementById('stat-members').textContent = total || '-';
       document.getElementById('stat-active').textContent = active || '-';
-      document.getElementById('stat-completed').textContent = completed || '-';
-      document.getElementById('stat-time').textContent = totalTime > 0 ? `${totalTime}h/周` : '-';
+      document.getElementById('stat-time').textContent = totalTime > 0 ? `${totalTime}h` : '-';
     }
 
     function renderMembers() {
       const container = document.getElementById('member-list');
 
       if (members.length === 0) {
-        container.innerHTML = `
-          <div class="member-card">
-            <div class="member-header">
-              <div class="member-avatar">T</div>
-              <div class="member-info">
-                <h3>Tang</h3>
-                <div class="meta">发起人 · 2026-02-08</div>
-              </div>
-            </div>
-            <div class="member-tasks">
-              <span class="task-badge in-progress">🔄 项目初始化</span>
-            </div>
-            <div class="skill-tags">
-              <span class="skill-tag">战略</span>
-              <span class="skill-tag">产品</span>
-              <span class="skill-tag">技术</span>
-            </div>
-          </div>
-        `;
+        container.innerHTML = '<div class="loading">暂无成员数据</div>';
         return;
       }
 
       container.innerHTML = members.map(member => {
         const initial = member.name.charAt(0).toUpperCase();
         const hasCurrentTask = member.current && member.current !== '-' && member.current !== '无';
-        const skills = member.skills ? member.skills.split(/[,，]/).map(s => s.trim()).filter(Boolean) : [];
+        const skills = member.skills ? member.skills.split(/[,，、]/).map(s => s.trim()).filter(Boolean) : [];
 
         return `
           <div class="member-card">
@@ -342,9 +345,9 @@
                 <div class="meta">${member.joined || ''} · ${member.time || ''}</div>
               </div>
             </div>
-            <div class="member-tasks">
+            <div style="margin-top: 8px;">
               ${hasCurrentTask ? `<span class="task-badge in-progress">🔄 ${member.current}</span>` : ''}
-              ${member.history ? `<span class="task-badge completed">✅ ${member.history.substring(0, 50)}${member.history.length > 50 ? '...' : ''}</span>` : ''}
+              ${member.history && member.history !== '-' ? `<span class="task-badge completed">✅ ${member.history}</span>` : ''}
             </div>
             ${skills.length > 0 ? `
               <div class="skill-tags">
@@ -356,10 +359,7 @@
       }).join('');
     }
 
-    // 导出给全局
     window.loadAll = loadAll;
-
-    // 初始加载
     loadAll();
   </script>
 
@@ -373,12 +373,8 @@
     }
 
     window.addEventListener('scroll', function() {
-      const backToTop = document.querySelector('.back-to-top');
-      if (window.scrollY > 300) {
-        backToTop.classList.remove('hidden');
-      } else {
-        backToTop.classList.add('hidden');
-      }
+      const btn = document.querySelector('.back-to-top');
+      btn.classList.toggle('hidden', window.scrollY <= 300);
     });
   </script>
 </body>
